Use Reflections for loading instead